Fix header gap, code no longer needed

--- a/q3arena.css
+++ b/q3arena.css
@@ -134,7 +134,7 @@ body {
     /*border-top:1px solid #ff0000;*/
     border-bottom:1px solid #ff0000;
     margin-top:0px;
-    padding-top:var(--PrimaryNavHeight);
+    /*padding-top:var(--PrimaryNavHeight);*/
 }
 
 #MainContentWrapper {
